# simplesystem-embedding

./: .dockerignore  .gitignore  .opencode  .vscode  2026-04-27_offers_codes_and_hybrid.md  AGENTS.md  APRIL_20_hnsw_reindex.md  APRIL_21.md  APRIL_21_offers_bulk_import.md  APRIL_23.md  ARTICLE_SEARCH_REPLACEMENT_STATUS.md  BULK_IMPORT_TUNING.md  CODES_IMPORT.md  Dockerfile.cross-encoder  FT_ELASTIC_IMPORT.md  HARDWARE_SIZING.md  INDEX_HOSTING.md  INDEX_HOSTING_HETZNER.md  MILVUS_COLLECTIONS.md  NOTES.md  PARITY_CHECKLIST.md  PARTITIONING.md  PROGRESSIVE_IMPORT_PLAN.md  PROGRESSIVE_IMPORT_RESULTS.md  README.md  TESTING_NOTES_2026-05-05.md  TODO_2026-05-03.md  big-infer-task.md  contained.yaml  cross-encoder-program.md  explore_feature_noise.py  hybrid_v0.md  program.md  pyproject.toml  results.tsv  run_embed_all.sh  suggest_plan.md  target_mapping.json  vast_cross_encoder.sh  vast_embedding.sh  (+1 more)
acl/: Dockerfile  README.md  app.py  main.py  metrics.py  models.py  openapi.yaml  tracing.py
artifacts/: ce_soup_calibration.json  f2_sample_http_request.txt  f2_sample_http_response.txt  f2_sample_request.json  f2_sample_response.json  lgbm_soup.cols.json
configs/: config.yaml  cross_encoder.yaml  distill_cross_encoder.yaml  distill_cross_encoder_6L.yaml  distill_cross_encoder_base_8L.yaml  distill_cross_encoder_binary.yaml  distill_cross_encoder_binary_6L.yaml  distill_cross_encoder_binary_8L.yaml
dev/: compose.yaml
indexer/: RUNBOOK.md  __init__.py  bulk.py  bulk_insert.py  collection_specs.py  duckdb_projection.py  embedding_text.py  friendly_id.py  projection.py  s2class_mapper.py  tei_cache.py  test_loader.py
issues/: article-search-replacement-acl-01-skeleton-openapi.md  article-search-replacement-acl-02-request-mapper.md  article-search-replacement-acl-03-response-mapper.md  article-search-replacement-acl-04-error-contract.md  article-search-replacement-acl-05-resilience-observability.md  article-search-replacement-acl-06-acceptance-suite.md  article-search-replacement-ftsearch-01-milvus-schema.md  article-search-replacement-ftsearch-02-http-contract.md  article-search-replacement-ftsearch-03-filtering.md  article-search-replacement-ftsearch-04-mode-sort-paging.md  article-search-replacement-ftsearch-05-aggregations.md  article-search-replacement-ftsearch-06-german-identifiers.md  article-search-replacement-ftsearch-07-operational.md  article-search-replacement-ftsearch-08-price-scope-prefilter.md  article-search-replacement-ftsearch-09-article-dedup.md  article-search-replacement-ftsearch-10-cv-article-envelope.md  article-search-replacement-ftsearch-11-margin-exhaustive-offer-rerank.md  article-search-replacement-indexer-01-bulk-rebuild.md  article-search-replacement-indexer-02-incremental.md  article-search-replacement-indexer-03-zero-downtime.md  article-search-replacement-plan.md  article-search-replacement-spec.md
logs/: progressive_sweep.csv
notebooks/: debug.ipynb  eda.ipynb
observability/: .env.example  compose.yaml
playground-app/: .env.example  Dockerfile  Dockerfile.dockerignore  README.md  catalog.py  compose.yaml  embed_client.py  main.py  milvus_search.py  offer_lookup.py  random_query.py  reference_page.html
prds/: full-catalog-validation-benchmark.md  graded-relevance-training-labels.md  hard-negative-mining.md  model-specific-text-templates.md  retrieval-default-training-config.md  retrieval-validation-splitting.md  semi-hard-negative-mining.md
reports/: bench_b00_ivf_flat.json  bench_full_ivf_flat.json  bench_full_ivf_flat_compacted.json  codes_audit.md  embedding-model-benchmark-report.md  full-catalog-embedding-run.md  hybrid_v0_validation.md  inference-results.tsv  offer_projection_s2class_status_2026-05-07.md  session-report-2026-05-07.md  session_2026-05-07_rust_indexer_pipeline.md  (+1 more)
rust/indexer-json-to-parquet/: Cargo.toml  README.md
rust/indexer-json-to-parquet/src/: main.rs
(+303 files in other folders)
