[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "embedding-train"
version = "0.1.0"
description = "Config-driven baseline for fine-tuning a text embedding model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "debugpy>=1.8.20",
  "duckdb>=1.5.0",
  "faiss-cpu>=1.11.0",
  "hydra-core>=1.3.2",
  "ipywidgets>=8.1.8",
  "jinja2>=3.1.5",
  "jupyter>=1.1.1",
  "lightning>=2.5.0",
  "mlflow>=2.20.0",
  "numpy>=2.2.4",
  "pandas>=2.2.3",
  "pyarrow>=19.0.1",
  "python-dotenv>=1.0.1",
  "sentencepiece>=0.2.0",
  "torch>=2.6.0",
  "transformers>=4.49.0",
]

[project.scripts]
embedding-train = "embedding_train.train:main"
embedding-infer = "embedding_train.infer:main"
embedding-eval = "embedding_train.eval:main"
embedding-index-build = "embedding_train.index_build:main"
embedding-index-search = "embedding_train.index_search:main"

[tool.hatch.build.targets.wheel]
packages = ["src/embedding_train"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
