[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "embedding-train"
version = "0.1.0"
description = "Config-driven baseline for fine-tuning a text embedding model"
readme = "README.md"
requires-python = ">=3.13,<3.14"
# Lean serving runtime (cross_encoder_serve.server). Training/eval/notebook
# tooling lives under [project.optional-dependencies].train — install with
# `uv sync --extra train` for local training work.
dependencies = [
  "fastapi>=0.115.0",
  "huggingface-hub>=0.24.0",
  "hydra-core>=1.3.2",
  "jinja2>=3.1.5",
  "lightgbm>=4.6.0",
  "lightning>=2.5.0",
  "numpy>=2.2.4",
  "torch>=2.6.0",
  "transformers>=4.49.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
train = [
  "boto3>=1.34.0",
  "debugpy>=1.8.20",
  "duckdb>=1.5.0",
  "faiss-cpu>=1.11.0",
  "httpx>=0.28.0",
  "ipywidgets>=8.1.8",
  "jupyter>=1.1.1",
  "mlflow>=2.20.0",
  "pandas>=2.2.3",
  "pyarrow>=19.0.1",
  "prometheus-fastapi-instrumentator>=7.0.0",
  "pymilvus>=2.4.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0",
  "redis>=5.0.0",
  "sentencepiece>=0.2.0",
]
serve = [
    "onnx>=1.21.0",
    "onnxruntime-gpu>=1.25.1",
    "onnxscript>=0.7.0",
    "tensorrt>=10.16.1.11",
]

[project.scripts]
embedding-train = "embedding_train.train:main"
embedding-infer = "embedding_train.infer:main"
embedding-eval = "embedding_train.eval:main"
embedding-catalog-benchmark = "embedding_train.catalog_benchmark:main"
embedding-index-build = "embedding_train.index_build:main"
embedding-index-search = "embedding_train.index_search:main"
embedding-mine-hard-negatives = "embedding_train.hard_negatives:main"
cross-encoder-train = "cross_encoder_train.train:main"

[tool.hatch.build.targets.wheel]
packages = ["src/embedding_train", "src/cross_encoder_train", "src/cross_encoder_serve"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "duckdb>=1.5.0",
    "openapi-spec-validator>=0.7.0",
    "pytest>=9.0.2",
]
